comentários de auxilio para Anna
Co-Authored-By: Gabriela de Araujo Poock <138500369+gabipoock@users.noreply.github.com>

--- a/Pictogramas/menu geral/DiaADia/DiaADia.html
+++ b/Pictogramas/menu geral/DiaADia/DiaADia.html
@@ -9,14 +9,19 @@
 </head>
 <body>
 
-  <!-- Barra superior com botão de menu -->
- <header class="top-bar">
+  <!-- OBSERVAÇÃO! Aqui no Dia a Dia e nas próximas partes dos pictogramas, vc deve
+  aumentar os tamanhos das caixas/boxes e deixá-las em formato quadrado, seguindo o flutterflow
+  se usar o mesmo modelo dos pictogramas iniciais, irão ficar pequenos e retangulares  -->
+<header class="top-bar">
   <button id="menu-toggle" aria-label="Abrir menu">&#9776;</button>
   <h1 class="title">Pictogramas - Dia a Dia</h1>
 </header>
 
 
-  <!-- Menu lateral com botão de fechar -->
+  <!-- Depois que criar uma caixa quadrada, para seguir o padrão de tamnho e ficar mais simples,
+  de o ctrl C e ctrl V apenas, mudando só as imagens dos pictogramas. DEIXE A PÁGINA RESPONSIVA!
+  quando terminar a página do Dia a Dia, é só copiar a página para fazer as outras responsivas e 
+  no mesmo formato!! -->
   <nav id="side-menu" class="side-menu">
     <button id="close-menu" aria-label="Fechar menu">✕</button>
     <ul>
