--- a/homepage/homepage.html
+++ b/homepage/homepage.html
@@ -14,12 +14,15 @@
   <nav id="side-menu" class="side-menu">
     <ul>
       <li><a href="#">Tela inicial</a></li>
-      <li><a href="#">PECS / Pictogramas</a></li>
-      <li><a href="#">Meus Cartões</a></li>
-      <li><a href="#">Transcrição Reversa</a></li>
-      <li><a href="#">Diário de Emoções</a></li>
+      <li><a href="../login/login.html">Voltar ao Login</a></li>
+      <li><a href="../Pictogramas/Dist/pictogramas.html">PECS / Pictogramas</a></li>
+      <li><a href="../cam/cam.html">Câmera</a></li>
+      <li><a href="../Pictogramas/menu geral/MeusCartoes/MeusCartoes.html">Meus Cartões</a></li>
+      <li><a href="../transcricao_reversa/trancricao.html">Transcrição Reversa</a></li>
+      <li><a href="../calendario/calendar.html">Calendário</a></li>
+      <li><a href="../diario/diario.html">Diário de Emoções</a></li>
       <li><a href="#">Lista de Tarefas</a></li>
-      <li><a href="#">Vídeos</a></li>
+      <li><a href="../videos/videos.html">Vídeos</a></li>
     </ul>
   </nav>
 
