Atualizações nos arquivos cam e homepage

--- a/homepage/homepage.html
+++ b/homepage/homepage.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>PWA - Mascote</title>
+  <title>PWA -Homepage</title>
   <link rel="stylesheet" href="homepage.css" />
 </head>
 <body>
@@ -28,7 +28,7 @@
 
 <main class="main-content">
   <div class="mascot-container">
-    <img src="/assets/gif.gif" alt="Mascote" class="mascot-img" />
+    <img src="../assets/gif.gif" alt="Mascote" class="mascot-img" />
     <p class="description">
       Somos um aplicativo inclusivo criado para facilitar a comunicação através
       de pictogramas, cartões e conversão de texto em áudio. Pensado especialmente
