lista de tarefas iniciada

--- a/cam/cam.html
+++ b/cam/cam.html
@@ -24,7 +24,7 @@
       <li><a href="../transcricao_reversa/trancricao.html">Transcrição Reversa</a></li>
       <li><a href="../calendario/calendar.html">Calendário</a></li>
       <li><a href="../diario/diario.html">Diário de Emoções</a></li>
-      <li><a href="#">Lista de Tarefas</a></li>
+      <li><a href="../listaDeTarefas/listaDeTarefas.html">Lista de Tarefas</a></li>
       <li><a href="../videos/videos.html">Vídeos</a></li>
     </ul>
   </nav>
