--- a/videos/videos.html
+++ b/videos/videos.html
@@ -7,10 +7,26 @@
     <link rel="stylesheet" href="videos.css" />
 </head>
 <body>
-<header>
-    <h1>MiniYou</h1>
+
+<header class="top-bar">
+    <button id="menu-toggle" aria-label="Abrir menu">&#9776;</button>
+    <h2>Videos</h2>
     <input type="text" placeholder="Buscar..." style="padding: 5px; width: 200px;">
 </header>
+
+      <nav id="side-menu" class="side-menu">
+    <ul>
+      <li><a href="#">Tela inicial</a></li>
+      <li><a href="../login/login.html">Voltar ao Login</a></li>
+      <li><a href="../Pictogramas/Dist/pictogramas.html">PECS / Pictogramas</a></li>
+      <li><a href="../cam/cam.html">Câmera</a></li>
+      <li><a href="../transcricao_reversa/trancricao.html">Transcrição Reversa</a></li>
+      <li><a href="../calendario/calendar.html">Calendário</a></li>
+      <li><a href="../diario/diario.html">Diário de Emoções</a></li>
+      <li><a href="../listaDeTarefas/listaDeTarefas.html">Lista de Tarefas</a></li>
+      <li><a href="../videos/videos.html">Vídeos</a></li>
+    </ul>
+  </nav>
 
 <div class="carousel-wrapper">
     <div class="carousel-buttons">
@@ -42,8 +58,130 @@
         <p>Descrição do vídeo 3</p>
         </div>
     </div>
+    <div class="video-card">
+        <iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ" allowfullscreen></iframe>
+        <div class="video-info">
+        <h3>Vídeo 1</h3>
+        <p>Descrição do vídeo 1</p>
+        </div>
+    </div>
 
-    <!-- Adicione mais vídeos se quiser -->
+<div class="video-card">
+        <iframe src="https://www.youtube.com/embed/3JZ_D3ELwOQ" allowfullscreen></iframe>
+        <div class="video-info">
+        <h3>Vídeo 2</h3>
+        <p>Descrição do vídeo 2</p>
+        </div>
+    </div>
+
+    <div class="video-card">
+        <iframe src="https://www.youtube.com/embed/tgbNymZ7vqY" allowfullscreen></iframe>
+        <div class="video-info">
+        <h3>Vídeo 3</h3>
+        <p>Descrição do vídeo 3</p>
+        </div>
+    </div>
+
+    </div>
+    <!-- 2 -->
+     <div class="carousel-container" id="carousel">
+    <div class="video-card">
+        <iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ" allowfullscreen></iframe>
+        <div class="video-info">
+        <h3>Vídeo 1</h3>
+        <p>Descrição do vídeo 1</p>
+        </div>
+    </div>
+
+<div class="video-card">
+        <iframe src="https://www.youtube.com/embed/3JZ_D3ELwOQ" allowfullscreen></iframe>
+        <div class="video-info">
+        <h3>Vídeo 2</h3>
+        <p>Descrição do vídeo 2</p>
+        </div>
+    </div>
+
+    <div class="video-card">
+        <iframe src="https://www.youtube.com/embed/tgbNymZ7vqY" allowfullscreen></iframe>
+        <div class="video-info">
+        <h3>Vídeo 3</h3>
+        <p>Descrição do vídeo 3</p>
+        </div>
+    </div>
+    <div class="video-card">
+        <iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ" allowfullscreen></iframe>
+        <div class="video-info">
+        <h3>Vídeo 1</h3>
+        <p>Descrição do vídeo 1</p>
+        </div>
+    </div>
+
+<div class="video-card">
+        <iframe src="https://www.youtube.com/embed/3JZ_D3ELwOQ" allowfullscreen></iframe>
+        <div class="video-info">
+        <h3>Vídeo 2</h3>
+        <p>Descrição do vídeo 2</p>
+        </div>
+    </div>
+
+    <div class="video-card">
+        <iframe src="https://www.youtube.com/embed/tgbNymZ7vqY" allowfullscreen></iframe>
+        <div class="video-info">
+        <h3>Vídeo 3</h3>
+        <p>Descrição do vídeo 3</p>
+        </div>
+    </div>
+
+    </div>
+  <!-- 3 -->
+     <div class="carousel-container" id="carousel">
+    <div class="video-card">
+        <iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ" allowfullscreen></iframe>
+        <div class="video-info">
+        <h3>Vídeo 1</h3>
+        <p>Descrição do vídeo 1</p>
+        </div>
+    </div>
+
+<div class="video-card">
+        <iframe src="https://www.youtube.com/embed/3JZ_D3ELwOQ" allowfullscreen></iframe>
+        <div class="video-info">
+        <h3>Vídeo 2</h3>
+        <p>Descrição do vídeo 2</p>
+        </div>
+    </div>
+
+    <div class="video-card">
+        <iframe src="https://www.youtube.com/embed/tgbNymZ7vqY" allowfullscreen></iframe>
+        <div class="video-info">
+        <h3>Vídeo 3</h3>
+        <p>Descrição do vídeo 3</p>
+        </div>
+    </div>
+    <div class="video-card">
+        <iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ" allowfullscreen></iframe>
+        <div class="video-info">
+        <h3>Vídeo 1</h3>
+        <p>Descrição do vídeo 1</p>
+        </div>
+    </div>
+
+<div class="video-card">
+        <iframe src="https://www.youtube.com/embed/3JZ_D3ELwOQ" allowfullscreen></iframe>
+        <div class="video-info">
+        <h3>Vídeo 2</h3>
+        <p>Descrição do vídeo 2</p>
+        </div>
+    </div>
+
+    <div class="video-card">
+        <iframe src="https://www.youtube.com/embed/tgbNymZ7vqY" allowfullscreen></iframe>
+        <div class="video-info">
+        <h3>Vídeo 3</h3>
+        <p>Descrição do vídeo 3</p>
+        </div>
+    </div>
+
     </div>
 </div>
 <script src="videos.js"></script>
