--- a/videos/videos.html
+++ b/videos/videos.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Mini YouTube</title>
+<title>Vídeos de Apoio</title>
     <link rel="stylesheet" href="videos.css" />
 </head>
 <body>
@@ -16,7 +16,7 @@
 
       <nav id="side-menu" class="side-menu">
     <ul>
-      <li><a href="#">Tela inicial</a></li>
+      <li><a href="../homepage/homepage.html">Tela inicial</a></li>
       <li><a href="../login/login.html">Voltar ao Login</a></li>
       <li><a href="../Pictogramas/Dist/pictogramas.html">PECS / Pictogramas</a></li>
       <li><a href="../cam/cam.html">Câmera</a></li>
@@ -27,162 +27,117 @@
       <li><a href="../videos/videos.html">Vídeos</a></li>
     </ul>
   </nav>
-
 <div class="carousel-wrapper">
+
+    <!-- Seção 1 -->
+    <h2 class="section-title">Sobre Crianças Não Verbais</h2>
     <div class="carousel-buttons">
-    <button onclick="scrollCarousel(-1)">&larr;</button>
-    <button onclick="scrollCarousel(1)">&rarr;</button>
+        <button onclick="scrollCarousel('carousel1', -1)">&larr;</button>
+        <button onclick="scrollCarousel('carousel1', 1)">&rarr;</button>
     </div>
+    <div class="carousel-container" id="carousel1">
+        <div class="video-card">
+            <iframe src="https://www.youtube.com/embed/9l7cpiXvriA" allowfullscreen></iframe>
 
-    <div class="carousel-container" id="carousel">
-    <div class="video-card">
-        <iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ" allowfullscreen></iframe>
-        <div class="video-info">
-        <h3>Vídeo 1</h3>
-        <p>Descrição do vídeo 1</p>
+            <div class="video-info">
+                <h3>Comunicação alternativa </h3>
+                <p>Brincadeiras para ensinar CAA.</p>
+            </div>
         </div>
-    </div>
+        <div class="video-card">
+            <iframe src="https://www.youtube.com/embed/BLT_3XfJ9r8" allowfullscreen></iframe>
+            <div class="video-info">
+                <h3>Estratégias de comunicação</h3>
+                <p>Dicas para interagir com crianças não verbais.</p>
+            </div>
+        </div>
+        <div class="video-card">
+            <iframe src="https://www.youtube.com/embed/9l7cpiXvriA" allowfullscreen></iframe>
 
-<div class="video-card">
-        <iframe src="https://www.youtube.com/embed/3JZ_D3ELwOQ" allowfullscreen></iframe>
-        <div class="video-info">
-        <h3>Vídeo 2</h3>
-        <p>Descrição do vídeo 2</p>
+            <div class="video-info">
+                <h3>Comunicação alternativa </h3>
+                <p>Brincadeiras para ensinar CAA.</p>
+            </div>
         </div>
-    </div>
+        <div class="video-card">
+            <iframe src="https://www.youtube.com/embed/9l7cpiXvriA" allowfullscreen></iframe>
 
-    <div class="video-card">
-        <iframe src="https://www.youtube.com/embed/tgbNymZ7vqY" allowfullscreen></iframe>
-        <div class="video-info">
-        <h3>Vídeo 3</h3>
-        <p>Descrição do vídeo 3</p>
+            <div class="video-info">
+                <h3>Comunicação alternativa </h3>
+                <p>Brincadeiras para ensinar CAA.</p>
+            </div>
         </div>
-    </div>
-    <div class="video-card">
-        <iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ" allowfullscreen></iframe>
-        <div class="video-info">
-        <h3>Vídeo 1</h3>
-        <p>Descrição do vídeo 1</p>
-        </div>
-    </div>
+        <div class="video-card">
+            <iframe src="https://www.youtube.com/embed/9l7cpiXvriA" allowfullscreen></iframe>
 
-<div class="video-card">
-        <iframe src="https://www.youtube.com/embed/3JZ_D3ELwOQ" allowfullscreen></iframe>
-        <div class="video-info">
-        <h3>Vídeo 2</h3>
-        <p>Descrição do vídeo 2</p>
+            <div class="video-info">
+                <h3>Comunicação alternativa </h3>
+                <p>Brincadeiras para ensinar CAA.</p>
+            </div>
         </div>
-    </div>
+        <div class="video-card">
+            <iframe src="https://www.youtube.com/embed/9l7cpiXvriA" allowfullscreen></iframe>
 
-    <div class="video-card">
-        <iframe src="https://www.youtube.com/embed/tgbNymZ7vqY" allowfullscreen></iframe>
-        <div class="video-info">
-        <h3>Vídeo 3</h3>
-        <p>Descrição do vídeo 3</p>
-        </div>
-    </div>
-
-    </div>
-    <!-- 2 -->
-     <div class="carousel-container" id="carousel">
-    <div class="video-card">
-        <iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ" allowfullscreen></iframe>
-        <div class="video-info">
-        <h3>Vídeo 1</h3>
-        <p>Descrição do vídeo 1</p>
+            <div class="video-info">
+                <h3>Comunicação alternativa </h3>
+                <p>Brincadeiras para ensinar CAA.</p>
+            </div>
         </div>
     </div>
 
-<div class="video-card">
-        <iframe src="https://www.youtube.com/embed/3JZ_D3ELwOQ" allowfullscreen></iframe>
-        <div class="video-info">
-        <h3>Vídeo 2</h3>
-        <p>Descrição do vídeo 2</p>
+    <!-- Seção 2 -->
+    <h2 class="section-title">Dicas...</h2>
+    <div class="carousel-buttons">
+        <button onclick="scrollCarousel('carousel2', -1)">&larr;</button>
+        <button onclick="scrollCarousel('carousel2', 1)">&rarr;</button>
+    </div>
+    <div class="carousel-container" id="carousel2">
+        <div class="video-card">
+            <iframe src="https://www.youtube.com/embed/niFfEqGvNfM" allowfullscreen></iframe>
+            <div class="video-info">
+                <h3>LIBRAS para iniciantes</h3>
+                <p>Primeiros sinais para se comunicar.</p>
+            </div>
+        </div>
+        <div class="video-card">
+            <iframe src="https://www.youtube.com/embed/b5g0_6M4u6Q" allowfullscreen></iframe>
+            <div class="video-info">
+                <h3>Frases simples em LIBRAS</h3>
+                <p>Como se apresentar e fazer perguntas.</p>
+            </div>
+        </div>
+        <div class="video-card">
+            <iframe src="https://www.youtube.com/embed/Mm1oEIpw6T8" allowfullscreen></iframe>
+            <div class="video-info">
+                <h3>Dicas para pais</h3>
+                <p>Como incentivar a comunicação.</p>
+            </div>
+        </div>
+        <div class="video-card">
+            <iframe src="https://www.youtube.com/embed/v5RluK1eQ6A" allowfullscreen></iframe>
+            <div class="video-info">
+                <h3>Ambiente acolhedor</h3>
+                <p>Estratégias para reduzir ansiedade.</p>
+            </div>
+        </div>
+        <div class="video-card">
+            <iframe src="https://www.youtube.com/embed/9l7cpiXvriA" allowfullscreen></iframe>
+
+            <div class="video-info">
+                <h3>Comunicação alternativa </h3>
+                <p>Brincadeiras para ensinar CAA.</p>
+            </div>
+        </div>
+        <div class="video-card">
+            <iframe src="https://www.youtube.com/embed/9l7cpiXvriA" allowfullscreen></iframe>
+
+            <div class="video-info">
+                <h3>Comunicação alternativa </h3>
+                <p>Brincadeiras para ensinar CAA.</p>
+            </div>
         </div>
     </div>
 
-    <div class="video-card">
-        <iframe src="https://www.youtube.com/embed/tgbNymZ7vqY" allowfullscreen></iframe>
-        <div class="video-info">
-        <h3>Vídeo 3</h3>
-        <p>Descrição do vídeo 3</p>
-        </div>
-    </div>
-    <div class="video-card">
-        <iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ" allowfullscreen></iframe>
-        <div class="video-info">
-        <h3>Vídeo 1</h3>
-        <p>Descrição do vídeo 1</p>
-        </div>
-    </div>
-
-<div class="video-card">
-        <iframe src="https://www.youtube.com/embed/3JZ_D3ELwOQ" allowfullscreen></iframe>
-        <div class="video-info">
-        <h3>Vídeo 2</h3>
-        <p>Descrição do vídeo 2</p>
-        </div>
-    </div>
-
-    <div class="video-card">
-        <iframe src="https://www.youtube.com/embed/tgbNymZ7vqY" allowfullscreen></iframe>
-        <div class="video-info">
-        <h3>Vídeo 3</h3>
-        <p>Descrição do vídeo 3</p>
-        </div>
-    </div>
-
-    </div>
-  <!-- 3 -->
-     <div class="carousel-container" id="carousel">
-    <div class="video-card">
-        <iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ" allowfullscreen></iframe>
-        <div class="video-info">
-        <h3>Vídeo 1</h3>
-        <p>Descrição do vídeo 1</p>
-        </div>
-    </div>
-
-<div class="video-card">
-        <iframe src="https://www.youtube.com/embed/3JZ_D3ELwOQ" allowfullscreen></iframe>
-        <div class="video-info">
-        <h3>Vídeo 2</h3>
-        <p>Descrição do vídeo 2</p>
-        </div>
-    </div>
-
-    <div class="video-card">
-        <iframe src="https://www.youtube.com/embed/tgbNymZ7vqY" allowfullscreen></iframe>
-        <div class="video-info">
-        <h3>Vídeo 3</h3>
-        <p>Descrição do vídeo 3</p>
-        </div>
-    </div>
-    <div class="video-card">
-        <iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ" allowfullscreen></iframe>
-        <div class="video-info">
-        <h3>Vídeo 1</h3>
-        <p>Descrição do vídeo 1</p>
-        </div>
-    </div>
-
-<div class="video-card">
-        <iframe src="https://www.youtube.com/embed/3JZ_D3ELwOQ" allowfullscreen></iframe>
-        <div class="video-info">
-        <h3>Vídeo 2</h3>
-        <p>Descrição do vídeo 2</p>
-        </div>
-    </div>
-
-    <div class="video-card">
-        <iframe src="https://www.youtube.com/embed/tgbNymZ7vqY" allowfullscreen></iframe>
-        <div class="video-info">
-        <h3>Vídeo 3</h3>
-        <p>Descrição do vídeo 3</p>
-        </div>
-    </div>
-
-    </div>
 </div>
 <script src="videos.js"></script>
 </body>
