--- a/homepage/homepage.html
+++ b/homepage/homepage.html
@@ -13,7 +13,7 @@
 
   <nav id="side-menu" class="side-menu">
     <ul>
-      <li><a href="#">Tela inicial</a></li>
+      <li><a href="../homepage/homepage.html">Tela inicial</a></li>
       <li><a href="../login/login.html">Voltar ao Login</a></li>
       <li><a href="../Pictogramas/Dist/pictogramas.html">PECS / Pictogramas</a></li>
       <li><a href="../cam/cam.html">Câmera</a></li>
