--- a/videos/videos.html
+++ b/videos/videos.html
@@ -14,19 +14,19 @@
     
 </header>
 
-      <nav id="side-menu" class="side-menu">
+    <nav id="side-menu" class="side-menu">
     <ul>
-      <li><a href="../homepage/homepage.html">Tela inicial</a></li>
-      <li><a href="../login/login.html">Voltar ao Login</a></li>
-      <li><a href="../Pictogramas/Dist/pictogramas.html">PECS / Pictogramas</a></li>
-      <li><a href="../cam/cam.html">Câmera</a></li>
-      <li><a href="../transcricao_reversa/trancricao.html">Transcrição Reversa</a></li>
-      <li><a href="../calendario/calendar.html">Calendário</a></li>
-      <li><a href="../diario/diario.html">Diário de Emoções</a></li>
-      <li><a href="../listaDeTarefas/listaDeTarefas.html">Lista de Tarefas</a></li>
-      <li><a href="../videos/videos.html">Vídeos</a></li>
+    <li><a href="../homepage/homepage.html">Tela inicial</a></li>
+    <li><a href="../login/login.html">Voltar ao Login</a></li>
+    <li><a href="../Pictogramas/Dist/pictogramas.html">PECS / Pictogramas</a></li>
+    <li><a href="../cam/cam.html">Câmera</a></li>
+    <li><a href="../transcricao_reversa/trancricao.html">Transcrição Reversa</a></li>
+    <li><a href="../calendario/calendar.html">Calendário</a></li>
+    <li><a href="../diario/diario.html">Diário de Emoções</a></li>
+    <li><a href="../listaDeTarefas/listaDeTarefas.html">Lista de Tarefas</a></li>
+    <li><a href="../videos/videos.html">Vídeos</a></li>
     </ul>
-  </nav>
+</nav>
 <div class="carousel-wrapper">
 
     <!-- Seção 1 -->
@@ -45,10 +45,10 @@
             </div>
         </div>
         <div class="video-card">
-            <iframe src="https://www.youtube.com/embed/BLT_3XfJ9r8" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/Z1McptdWGKE" allowfullscreen></iframe>
             <div class="video-info">
-                <h3>Estratégias de comunicação</h3>
-                <p>Dicas para interagir com crianças não verbais.</p>
+                <h3>Existe diferença entre criança<br> 
+                    não verbal e criança não falante?</h3>
             </div>
         </div>
         <div class="video-card">
@@ -87,37 +87,41 @@
 
     <!-- Seção 2 -->
     <h2 class="section-title">Dicas...</h2>
+    
     <div class="carousel-buttons">
-        <button onclick="scrollCarousel('carousel2', -1)">&larr;</button>
-        <button onclick="scrollCarousel('carousel2', 1)">&rarr;</button>
+        <button onclick="scrollCarousel('carousel1', -1)">&larr;</button>
+        <button onclick="scrollCarousel('carousel1', 1)">&rarr;</button>
     </div>
-    <div class="carousel-container" id="carousel2">
+    <div class="carousel-container" id="carousel1">
         <div class="video-card">
-            <iframe src="https://www.youtube.com/embed/niFfEqGvNfM" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/9l7cpiXvriA" allowfullscreen></iframe>
+
             <div class="video-info">
-                <h3>LIBRAS para iniciantes</h3>
-                <p>Primeiros sinais para se comunicar.</p>
+                <h3>Comunicação alternativa </h3>
+                <p>Brincadeiras para ensinar CAA.</p>
             </div>
         </div>
         <div class="video-card">
-            <iframe src="https://www.youtube.com/embed/b5g0_6M4u6Q" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/Z1McptdWGKE" allowfullscreen></iframe>
             <div class="video-info">
-                <h3>Frases simples em LIBRAS</h3>
-                <p>Como se apresentar e fazer perguntas.</p>
+                <h3>Existe diferença entre criança<br> 
+                    não verbal e criança não falante?</h3>
             </div>
         </div>
         <div class="video-card">
-            <iframe src="https://www.youtube.com/embed/Mm1oEIpw6T8" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/9l7cpiXvriA" allowfullscreen></iframe>
+
             <div class="video-info">
-                <h3>Dicas para pais</h3>
-                <p>Como incentivar a comunicação.</p>
+                <h3>Comunicação alternativa </h3>
+                <p>Brincadeiras para ensinar CAA.</p>
             </div>
         </div>
         <div class="video-card">
-            <iframe src="https://www.youtube.com/embed/v5RluK1eQ6A" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/9l7cpiXvriA" allowfullscreen></iframe>
+
             <div class="video-info">
-                <h3>Ambiente acolhedor</h3>
-                <p>Estratégias para reduzir ansiedade.</p>
+                <h3>Comunicação alternativa </h3>
+                <p>Brincadeiras para ensinar CAA.</p>
             </div>
         </div>
         <div class="video-card">
