--- a/homepage/homepage.html
+++ b/homepage/homepage.html
@@ -27,7 +27,7 @@
 
 <main class="main-content">
   <div class="mascot-container">
-    <img src="../assets/gif.gif" alt="Mascote" class="mascot-img" />
+    <img src="../assets/gitfink.gif" alt="Mascote" class="mascot-img" />
     <p class="description">
       Somos um aplicativo inclusivo criado para facilitar a comunicação através
       de pictogramas, cartões e conversão de texto em áudio. Pensado especialmente
