--- a/homepage/homepage.html
+++ b/homepage/homepage.html
@@ -7,12 +7,15 @@
   <link rel="stylesheet" href="homepage.css" />
 </head>
 <body>
-  <header class="top-bar">
-    <button id="menu-toggle" aria-label="Abrir menu">&#9776;</button>
-  </header>
-
-  <nav id="side-menu" class="side-menu">
-    <ul>
+ <!-- Menu Hambúrguer -->
+  <header>
+    <nav class="navbar">
+      <div class="menu-toggle" id="mobile-menu">
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
+      <ul class="nav-list" id="nav-list">
       <li><a href="../homepage/homepage.html">Tela inicial</a></li>
       <li><a href="../login/login.html">Voltar ao Login</a></li>
       <li><a href="../Pictogramas/Dist/pictogramas.html">PECS / Pictogramas</a></li>
@@ -22,8 +25,9 @@
       <li><a href="../diario/diario.html">Diário de Emoções</a></li>
       <li><a href="../listaDeTarefas/listaDeTarefas.html">Lista de Tarefas</a></li>
       <li><a href="../videos/videos.html">Vídeos</a></li>
-    </ul>
-  </nav>
+      </ul>
+    </nav>
+  </header>
 
 <main class="main-content">
   <div class="mascot-container">
