--- a/cam/cam.html
+++ b/cam/cam.html
@@ -7,17 +7,17 @@
   <link rel="stylesheet" href="cam.css">
 <meta id="dcngeagmmhegagicpcmpinaoklddcgon">
 <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@4.10.0/dist/tf.min.js"></script>
-</head>
-<body>
-  <header class="top-bar">
-    
-    <button id="menu-toggle" aria-label="Abrir menu">&#9776;</button>
-    <p class="top-bar-title">Meus Cartões</p>
-  </header>
-
-      <nav id="side-menu" class="side-menu">
-    <ul>
-      <li><a href="#">Tela inicial</a></li>
+<!-- Menu Hambúrguer -->
+  <header>
+    <nav class="navbar">
+      <div class="menu-toggle" id="mobile-menu">
+        
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
+      <ul class="nav-list" id="nav-list">
+      <li><a href="../homepage/homepage.html">Tela inicial</a></li>
       <li><a href="../login/login.html">Voltar ao Login</a></li>
       <li><a href="../Pictogramas/Dist/pictogramas.html">PECS / Pictogramas</a></li>
       <li><a href="../cam/cam.html">Câmera</a></li>
@@ -26,9 +26,13 @@
       <li><a href="../diario/diario.html">Diário de Emoções</a></li>
       <li><a href="../listaDeTarefas/listaDeTarefas.html">Lista de Tarefas</a></li>
       <li><a href="../videos/videos.html">Vídeos</a></li>
-    </ul>
-  </nav>
-
+      </ul>
+    </nav>
+    <p class="top-bar-title">Câmera</p>
+  </header>
+</head>
+<body>
+  
   
   <div class="main-content">
     <h2>Mostra que eu te falo</h2>
