--- a/videos/videos.html
+++ b/videos/videos.html
@@ -40,23 +40,23 @@
             <iframe src="https://www.youtube.com/embed/9l7cpiXvriA" allowfullscreen></iframe>
 
             <div class="video-info">
-                <h3>Comunicação alternativa </h3>
-                <p>Brincadeiras para ensinar CAA.</p>
+                <h3>Comunicação alternativa<br> </h3>
+                
             </div>
         </div>
         <div class="video-card">
-            <iframe src="https://www.youtube.com/embed/Z1McptdWGKE" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/vwOKr40LOJI" allowfullscreen></iframe>
             <div class="video-info">
-                <h3>Existe diferença entre criança<br> 
-                    não verbal e criança não falante?</h3>
+                <h3>Comunicação Não Verbal: <br>Tudo o que você precisa saber!</h3>
             </div>
         </div>
         <div class="video-card">
-            <iframe src="https://www.youtube.com/embed/9l7cpiXvriA" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/4fdc5dMQ12E" allowfullscreen></iframe>
 
             <div class="video-info">
-                <h3>Comunicação alternativa </h3>
-                <p>Brincadeiras para ensinar CAA.</p>
+                <h3>Linguagem alternativa (#pecs)<br> 
+                    <br>
+                </h3>
             </div>
         </div>
         <div class="video-card">
@@ -94,18 +94,16 @@
     </div>
     <div class="carousel-container" id="carousel1">
         <div class="video-card">
-            <iframe src="https://www.youtube.com/embed/9l7cpiXvriA" allowfullscreen></iframe>
-
+            <iframe src="https://www.youtube.com/embed/Z1McptdWGKE" allowfullscreen></iframe>
             <div class="video-info">
-                <h3>Comunicação alternativa </h3>
-                <p>Brincadeiras para ensinar CAA.</p>
+                <h3>Existe diferença entre criança<br>
+                    não verbal e criança não falante?</h3>
             </div>
         </div>
         <div class="video-card">
-            <iframe src="https://www.youtube.com/embed/Z1McptdWGKE" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/MHLgszMrU6E" allowfullscreen></iframe>
             <div class="video-info">
-                <h3>Existe diferença entre criança<br> 
-                    não verbal e criança não falante?</h3>
+                <h3>Atividades para Crianças <br>Não Verbais</h3>
             </div>
         </div>
         <div class="video-card">
