--- a/cam/cam.html
+++ b/cam/cam.html
@@ -71,7 +71,7 @@
 
       <div class="actions">
         <input id="fileInput" type="file" accept="image/*" multiple />
-        <button id="chooseBtn" class="btn" type="button">Escolher imagens</button>
+        <button id="chooseBtn" class="btn" type="button">imagens</button>
         <button id="clearBtn" class="btn ghost" type="button">Limpar</button>
       </div>
     </div>
