--- a/transcricao_reversa/trancricao.html
+++ b/transcricao_reversa/trancricao.html
@@ -7,24 +7,36 @@
     <link rel="stylesheet" href="transcricao.css">
 </head>
 <body>
-    <header class="top-bar">
-    <button id="menu-toggle" aria-label="Abrir menu">&#9776;</button>
-  </header>
+    <!-- Menu Hambúrguer -->
+<header>
+  <nav class="navbar">
+    <!-- Botão do menu hambúrguer -->
+    <div class="menu-toggle" id="mobile-menu">
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
 
-  <h1 class="titulo-central">Transcrição Reversa</h1>
-      <nav id="side-menu" class="side-menu">
-    <ul>
-      <li><a href="../homepage/homepage.html">Tela inicial</a></li>
-      <li><a href="../login/login.html">Voltar ao Login</a></li>
-      <li><a href="../Pictogramas/Dist/pictogramas.html">PECS / Pictogramas</a></li>
-      <li><a href="../cam/cam.html">Câmera</a></li>
-      <li><a href="../transcricao_reversa/trancricao.html">Transcrição Reversa</a></li>
-      <li><a href="../calendario/calendar.html">Calendário</a></li>
-      <li><a href="../diario/diario.html">Diário de Emoções</a></li>
-      <li><a href="../listaDeTarefas/listaDeTarefas.html">Lista de Tarefas</a></li>
-      <li><a href="../videos/videos.html">Vídeos</a></li>
+    <!-- Título -->
+    <div class="header">
+      <h1 class="Title">Transcrição Reversa</h1>
+    </div>
+
+    <!-- Menu lateral -->
+    <ul class="nav-list" id="nav-list">
+      <li><a href="/homepage/homepage.html">Tela inicial</a></li>
+      <li><a href="/login/login.html">Voltar ao Login</a></li>
+      <li><a href="/Pictogramas/Dist/pictogramas.html">PECS / Pictogramas</a></li>
+      <li><a href="/cam/cam.html">Câmera</a></li>
+      <li><a href="/transcricao_reversa/trancricao.html">Transcrição Reversa</a></li>
+      <li><a href="/calendario/calendar.html">Calendário</a></li>
+      <li><a href="/diario/diario.html">Diário de Emoções</a></li>
+      <li><a href="/listaDeTarefas/listaDeTarefas.html">Lista de Tarefas</a></li>
+      <li><a href="/videos/videos.html">Vídeos</a></li>
     </ul>
   </nav>
+</header>
+
 
   <!--Bem-vindo ao nosso aplicativo para pessoas não verbais! Este é um espaço pensado
   especialmente para facilitar a comunicação através da ferramenta de Transcrição Reversa,
