--- a/Pictogramas/menu geral/Dor/Dores.html
+++ b/Pictogramas/menu geral/Dor/Dores.html
@@ -9,24 +9,30 @@
 </head>
 <body>
 
-  <header class="top-bar">
-    <button id="menu-toggle" aria-label="Abrir menu">&#9776;</button>
-    <h1 class="title">Pictogramas - Dores</h1>
+  <header>
+    <nav class="navbar">
+      <div class="header">
+        <div class="menu-toggle" id="mobile-menu">
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
+          <h1 class="Title">Pictogramas - Dores</h1>
+        </div>
+      </div>
+      <ul class="nav-list" id="nav-list">
+      <li><a href="/homepage/homepage.html">Tela inicial</a></li>
+      <li><a href="/login/login.html">Voltar ao Login</a></li>
+      <li><a href="/Pictogramas/Dist/pictogramas.html">PECS / Pictogramas</a></li>
+      <li><a href="/cam/cam.html">Câmera</a></li>
+      <li><a href="/transcricao_reversa/trancricao.html">Transcrição Reversa</a></li>
+      <li><a href="/calendario/calendar.html">Calendário</a></li>
+      <li><a href="/diario/diario.html">Diário de Emoções</a></li>
+      <li><a href="/listaDeTarefas/listaDeTarefas.html">Lista de Tarefas</a></li>
+      <li><a href="/videos/videos.html">Vídeos</a></li>
+      </ul>
+    </nav>
   </header>
-
-  <nav id="side-menu" class="side-menu">
-    <button id="close-menu" aria-label="Fechar menu">✕</button>
-    <ul>
-      <li><a href="#">Tela inicial</a></li>
-      <li><a href="#">PECS / Pictogramas</a></li>
-      <li><a href="#">Meus Cartões</a></li>
-      <li><a href="#">Transcrição Reversa</a></li>
-      <li><a href="#">Diário de Emoções</a></li>
-      <li><a href="#">Lista de Tarefas</a></li>
-      <li><a href="#">Vídeos</a></li>
-    </ul>
-  </nav>
-
 <div class="card blue">
       <img src="/Pictogramas/Imagens/Dor/Cabeça.png" alt="Cabeça" class="card-image">
     </div>
