--- a/cam/cam.html
+++ b/cam/cam.html
@@ -7,30 +7,38 @@
   <link rel="stylesheet" href="cam.css">
 <meta id="dcngeagmmhegagicpcmpinaoklddcgon">
 <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@4.10.0/dist/tf.min.js"></script>
-<!-- Menu Hambúrguer -->
-  <header>
-    <nav class="navbar">
-      <div class="menu-toggle" id="mobile-menu">
-        
-        <span></span>
-        <span></span>
-        <span></span>
-      </div>
-      <ul class="nav-list" id="nav-list">
-      <li><a href="../homepage/homepage.html">Tela inicial</a></li>
-      <li><a href="../login/login.html">Voltar ao Login</a></li>
-      <li><a href="../Pictogramas/Dist/pictogramas.html">PECS / Pictogramas</a></li>
-      <li><a href="../cam/cam.html">Câmera</a></li>
-      <li><a href="../transcricao_reversa/trancricao.html">Transcrição Reversa</a></li>
-      <li><a href="../calendario/calendar.html">Calendário</a></li>
-      <li><a href="../diario/diario.html">Diário de Emoções</a></li>
-      <li><a href="../listaDeTarefas/listaDeTarefas.html">Lista de Tarefas</a></li>
-      <li><a href="../videos/videos.html">Vídeos</a></li>
-      </ul>
-    </nav>
-    <p class="top-bar-title">Câmera</p>
-  </header>
 </head>
+    <!-- Menu Hambúrguer -->
+<header>
+  <nav class="navbar">
+    <!-- Botão do menu hambúrguer -->
+    <div class="menu-toggle" id="mobile-menu">
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
+
+    <!-- Título -->
+    <div class="header">
+      <h1 class="Title">Câmera</h1>
+    </div>
+
+    <!-- Menu lateral -->
+    <ul class="nav-list" id="nav-list">
+      <li><a href="/homepage/homepage.html">Tela inicial</a></li>
+      <li><a href="/login/login.html">Voltar ao Login</a></li>
+      <li><a href="/Pictogramas/Dist/pictogramas.html">PECS / Pictogramas</a></li>
+      <li><a href="/cam/cam.html">Câmera</a></li>
+      <li><a href="/transcricao_reversa/trancricao.html">Transcrição Reversa</a></li>
+      <li><a href="/calendario/calendar.html">Calendário</a></li>
+      <li><a href="/diario/diario.html">Diário de Emoções</a></li>
+      <li><a href="/listaDeTarefas/listaDeTarefas.html">Lista de Tarefas</a></li>
+      <li><a href="/videos/videos.html">Vídeos</a></li>
+    </ul>
+  </nav>
+</header>
+
+
 <body>
   
   
