--- a/listaDeTarefas/listaDeTarefas.html
+++ b/listaDeTarefas/listaDeTarefas.html
@@ -8,24 +8,36 @@
 </head>
 
 <body>
-      <header class="top-bar">
-    <button id="menu-toggle" aria-label="Abrir menu">&#9776;</button>
-    <h1 class="top-bar-title">Minhas Tarefas</h1>
-  </header>
+          <!-- Menu Hambúrguer -->
+<header>
+  <nav class="navbar">
+    <!-- Botão do menu hambúrguer -->
+    <div class="menu-toggle" id="mobile-menu">
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
 
-  <nav id="side-menu" class="side-menu">
-    <ul>
-      <li><a href="#">Tela inicial</a></li>
-      <li><a href="../login/login.html">Voltar ao Login</a></li>
-      <li><a href="../Pictogramas/Dist/pictogramas.html">PECS / Pictogramas</a></li>
-      <li><a href="../cam/cam.html">Câmera</a></li>
-      <li><a href="../transcricao_reversa/trancricao.html">Transcrição Reversa</a></li>
-      <li><a href="../calendario/calendar.html">Calendário</a></li>
-      <li><a href="../diario/diario.html">Diário de Emoções</a></li>
-      <li><a href="../listaDeTarefas/listaDeTarefas.html">Lista de Tarefas</a></li>
-      <li><a href="../videos/videos.html">Vídeos</a></li>
+    <!-- Título -->
+    
+      <h1 class="Title">Transcrição Reversa</h1>
+  
+
+    <!-- Menu lateral -->
+    <ul class="nav-list" id="nav-list">
+      <li><a href="/homepage/homepage.html">Tela inicial</a></li>
+      <li><a href="/login/login.html">Voltar ao Login</a></li>
+      <li><a href="/Pictogramas/Dist/pictogramas.html">PECS / Pictogramas</a></li>
+      <li><a href="/cam/cam.html">Câmera</a></li>
+      <li><a href="/transcricao_reversa/trancricao.html">Transcrição Reversa</a></li>
+      <li><a href="/calendario/calendar.html">Calendário</a></li>
+      <li><a href="/diario/diario.html">Diário de Emoções</a></li>
+      <li><a href="/listaDeTarefas/listaDeTarefas.html">Lista de Tarefas</a></li>
+      <li><a href="/videos/videos.html">Vídeos</a></li>
     </ul>
   </nav>
+</header>
+  
   <div id="app">
     
     <div class="task-list" id="taskList">
