--- a/transcricao_reversa/trancricao.html
+++ b/transcricao_reversa/trancricao.html
@@ -24,15 +24,15 @@
 
     <!-- Menu lateral -->
     <ul class="nav-list" id="nav-list">
-      <li><a href="/homepage/homepage.html">Tela inicial</a></li>
-      <li><a href="/login/login.html">Voltar ao Login</a></li>
-      <li><a href="/Pictogramas/Dist/pictogramas.html">PECS / Pictogramas</a></li>
-      <li><a href="/cam/cam.html">Câmera</a></li>
-      <li><a href="/transcricao_reversa/trancricao.html">Transcrição Reversa</a></li>
-      <li><a href="/calendario/calendar.html">Calendário</a></li>
-      <li><a href="/diario/diario.html">Diário de Emoções</a></li>
-      <li><a href="/listaDeTarefas/listaDeTarefas.html">Lista de Tarefas</a></li>
-      <li><a href="/videos/videos.html">Vídeos</a></li>
+      <li><a href="../homepage/homepage.html">Tela inicial</a></li>
+      <li><a href="../login/login.html">Voltar ao Login</a></li>
+      <li><a href="../Pictogramas/Dist/pictogramas.html">PECS / Pictogramas</a></li>
+      <li><a href="../cam/cam.html">Câmera</a></li>
+      <li><a href="../transcricao_reversa/trancricao.html">Transcrição Reversa</a></li>
+      <li><a href="../calendario/calendar.html">Calendário</a></li>
+      <li><a href="../diario/diario.html">Diário de Emoções</a></li>
+      <li><a href="../listaDeTarefas/listaDeTarefas.html">Lista de Tarefas</a></li>
+      <li><a href="../videos/videos.html">Vídeos</a></li>
     </ul>
   </nav>
 </header>
