removendo acentos pictogramas iniciais

--- a/Pictogramas/menu geral/Cores/Cores.html
+++ b/Pictogramas/menu geral/Cores/Cores.html
@@ -38,7 +38,7 @@
   </header>
 
 <div class="card blue">
-      <img src="/Pictogramas/Imagens/Cores/Rosa.png" alt="Rosa" class="card-image">
+      <img src="../Pictogramas/Imagens/Cores/Rosa.png" alt="Rosa" class="card-image">
     </div>
 
     <div class="card pink">
